# MyFate

./: .gitignore  CMakeLists.txt  MyFate.sln  MyFate.vcxproj  MyFate.vcxproj.filters  background.cpp  background.h  camera.cpp  camera.h  cd.cpp  cd.h  credits.txt  data.cpp  data.h  dialouge.cpp  dialouge.h  ground.cpp  ground.h  iso.xml  item.cpp  item.h  main.cpp  npc.cpp  npc.h  object.h  pad.cpp  pad.h  player.cpp  player.h  pos.txt  render.cpp  render.h  utils.cpp  utils.h
.sentry-native/73e590a6-ae57-4ddc-04d2-aaedd4f77765.run/: __sentry-event
assets/: Fate.PSX  MyFateTiles.tim  NPC.smd  NPC.smx  Player.smd  Player.smx  Quest.smd  Quest.smx  handring.tim  question.mat  question.ply  question.rsd  sky.tim  untitled.mat  untitled.ply  untitled.rsd  vaporwave.tim
